--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Morpion</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -16,54 +16,54 @@
     <div class="container mt-3 opacity">
         <div class="row">
             <div class="col-12 text-center shadow text-light bg-dark p-5">
-                Nombre de tour :
+                MORPIONICUS
             </div>
         </div>
     </div>
 
     <div class="container p-5 box-shadow  wrapper ">
         <div class="row">
-            <div1 case="0" class="case col-4 border-end   border-bottom text-center border-top border-start p-5 ">
+            <div1 case="1" class="case col-4 border-end   border-bottom text-center border-top border-start p-5 ">
                 <a>x</a>
             </div1>
-            <div2 case="1" class="case col-4 border-end  border-bottom text-center border-top  p-5">
-                o
+            <div2 case="2" class="case col-4 border-end  border-bottom text-center border-top  p-5">
+
             </div2>
-            <div3 case="2" class="case col-4 border-end   border-bottom text-center border-top p-5">
-                x
+            <div3 case="3" class="case col-4 border-end   border-bottom text-center border-top p-5">
+
             </div3>
-            <div4 case="3" class="case col-4 border-end  border-bottom text-center border-top border-start p-5 ">
-                o
+            <div4 case="4" class="case col-4 border-end  border-bottom text-center border-top border-start p-5 ">
+
             </div4>
-            <div5 case="4" class="case col-4 border-end border-bottom text-center border-top p-5">
-                x
+            <div5 case="5" class="case col-4 border-end border-bottom text-center border-top p-5">
+
             </div5>
-            <div6 case="5" class="case col-4 border-end text-center border-top border-bottom p-5">
-                o
+            <div6 case="6" class="case col-4 border-end text-center border-top border-bottom p-5">
+
             </div6>
-            <div7 case="6"
+            <div7 case="7"
                 class="case col-4 border-end text-center border-top border-bottom border-top border-start p-5">
-                x
+
             </div7>
-            <div8 case="7" class="case col-4 border-end text-center border-top border-bottom p-5">
-                x
+            <div8 case="8" class="case col-4 border-end text-center border-top border-bottom p-5">
+
             </div8>
-            <div9 case="8" class="case col-4 border-end text-center border-top border-bottom p-5">
-                o
+            <div9 case="9" class="case col-4 border-end text-center border-top border-bottom p-5">
+
             </div9>
         </div>
     </div>
     <div class="container opacity-50">
         <div class="row">
-            <div class="col-12 text-center shadow text-light bg-dark p-5">
-                Tour du joueur numéro 1
+            <div class="tour col-12 text-center shadow text-light bg-dark p-5">
+                Tour : 0
             </div>
         </div>
     </div>
 
     <div class="container mt-5">
         <div class="row">
-            <div class="col-12 text-center shadow text-light bg-dark p-5">
+            <div class="wonBy col-12 text-center shadow text-light bg-dark p-5">
                 joueur gagnant :
             </div>
         </div>
