add reset button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
     <div class="container mt-3 opacity">
         <div class="row">
-            <div class="col-12 text-center shadow text-light bg-dark p-5">
+            <div class=" col-12 text-center shadow text-light bg-dark p-5">
                 MORPIONICUS
+                <button type="button" class="btn btn-warning">recommencer</button>
             </div>
         </div>
     </div>
